[package]
name = "m328p_robo_rust"
version = "0.1.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"

[features]
default = ["rt"]
rt = ["atmega328p-hal/rt"]

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = 2

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = 2

[dependencies]
nb = "0.1.2"
panic-halt = "0.2.0"
avr-device = { version = "0.2.1", features = ["rt"] }
atmega328p-hal = { path = "/Users/nis/Develop/avr-hal/chips/atmega328p-hal/" }
avr-hal-generic = { path = "/Users/nis/Develop/avr-hal/avr-hal-generic/" }

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[patch.crates-io]
# XXX: Temporary fix for avr-rust/rust#148
ufmt = { git = "https://github.com/Rahix/ufmt.git", rev = "12225dc1678e42fecb0e8635bf80f501e24817d9" }
